--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -10,6 +10,10 @@
   overflow: hidden;
 }
 
+.button--lg{
+  text-transform: none;
+}
+
 @media screen and (max-width: 996px) {
   .heroBanner {
     padding: 2rem;
@@ -21,3 +25,5 @@
   align-items: left;
   justify-content: left;
 }
+
+
